--- a/src/Views/template.phtml
+++ b/src/Views/template.phtml
@@ -1,4 +1,7 @@
-<?php /* @var string $content */ ?>
+<?php
+/* @var string $content
+ * @var string $title */ ?>
+
 <!doctype html>
 <html lang="fr">
 <head>
@@ -6,7 +9,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MVC</title>
+    <title>MVC<?= $title ?></title>
 </head>
 <body>
     <!-- Contenu dynamique -->
