--- a/src/Views/template.phtml
+++ b/src/Views/template.phtml
@@ -9,7 +9,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MVC<?= $title ?></title>
+    <title>MVC - <?= $title ?></title>
 </head>
 <body>
     <!-- Contenu dynamique -->
